# commonutils

./: CMakeLists.txt  uninstall.sh
include/: Common.h
src/: Common.cpp
